Bug 111640 - [CI][RESUME] igt@runner@aborted - fail - Previous test: kms_atomic_transition (plane-toggle-modeset-transition)
Summary: [CI][RESUME] igt@runner@aborted - fail - Previous test: kms_atomic_transition...
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: high critical
Assignee: Ankit
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-11 05:43 UTC by Martin Peres
Modified: 2019-10-16 12:43 UTC (History)
1 user (show)

See Also:
i915 platform: TGL
i915 features: display/Other


Attachments

Description Martin Peres 2019-09-11 05:43:27 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_362/fi-tgl-u/igt%40kms_atomic_transition%40plane-toggle-modeset-transition.html

<4> [655.099170] ------------[ cut here ]------------
<4> [655.099171] cursor D assertion failure (expected on, current off)
<4> [655.099226] WARNING: CPU: 0 PID: 1466 at drivers/gpu/drm/i915/display/intel_display.c:1280 assert_plane+0xaf/0xc0 [i915]
<4> [655.099227] Modules linked in: vgem mei_hdcp i915 ax88179_178a usbnet x86_pkg_temp_thermal mii coretemp crct10dif_pclmul crc32_pclmul ghash_clmulni_intel mei_me mei prime_numbers
<4> [655.099236] CPU: 0 PID: 1466 Comm: kms_atomic_tran Tainted: G     U            5.3.0-rc7-gd3d45e02f5ad-drmtip_362+ #1
<4> [655.099238] Hardware name: Intel Corporation Tiger Lake Client Platform/TigerLake U DDR4 SODIMM RVP, BIOS TGLSFWI1.R00.2321.A01.1908052106 08/05/2019
<4> [655.099269] RIP: 0010:assert_plane+0xaf/0xc0 [i915]
<4> [655.099271] Code: 00 33 c0 84 c0 48 c7 c2 a8 00 33 c0 48 89 f1 48 c7 c7 a0 a6 30 c0 48 0f 44 ca 40 84 ed 48 0f 45 d6 48 8b 73 18 e8 a1 11 ea e4 <0f> 0b e9 7b ff ff ff e8 75 14 ea e4 0f 1f 44 00 00 48 89 f8 c1 e6
<4> [655.099272] RSP: 0018:ffffb5c800cb3ac8 EFLAGS: 00010286
<4> [655.099274] RAX: 0000000000000000 RBX: ffff9e008c678008 RCX: 0000000000000001
<4> [655.099275] RDX: 0000000080000001 RSI: ffff9e00950308f0 RDI: 00000000ffffffff
<4> [655.099276] RBP: 0000000000000001 R08: ffff9e00950308f0 R09: 0000000000000000
<4> [655.099278] R10: 0000000000000000 R11: 0000000000000000 R12: ffff9e0099521158
<4> [655.099279] R13: ffff9e008ccf0758 R14: ffff9e008ccf0000 R15: ffff9e008ccf0750
<4> [655.099280] FS:  00007fed57d4b300(0000) GS:ffff9e00a0400000(0000) knlGS:0000000000000000
<4> [655.099282] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [655.099283] CR2: 00007f638f60df00 CR3: 000000048f5dc004 CR4: 0000000000760ef0
<4> [655.099284] PKRU: 55555554
<4> [655.099285] Call Trace:
<4> [655.099319]  intel_atomic_commit_tail+0xf12/0x1570 [i915]
<4> [655.099357]  intel_atomic_commit+0x273/0x2f0 [i915]
<4> [655.099361]  drm_mode_atomic_ioctl+0x86f/0x960
<4> [655.099370]  ? drm_atomic_set_property+0x9b0/0x9b0
<4> [655.099372]  drm_ioctl_kernel+0x83/0xf0
<4> [655.099375]  drm_ioctl+0x2f3/0x3b0
<4> [655.099378]  ? drm_atomic_set_property+0x9b0/0x9b0
<4> [655.099383]  ? __lock_acquire+0x4ac/0x1e90
<4> [655.099388]  do_vfs_ioctl+0xa0/0x6f0
<4> [655.099391]  ? __task_pid_nr_ns+0xbc/0x1f0
<4> [655.099395]  ksys_ioctl+0x35/0x60
<4> [655.099398]  __x64_sys_ioctl+0x11/0x20
<4> [655.099401]  do_syscall_64+0x55/0x1c0
<4> [655.099404]  entry_SYSCALL_64_after_hwframe+0x49/0xbe
<4> [655.099406] RIP: 0033:0x7fed56fcc5d7
<4> [655.099408] Code: b3 66 90 48 8b 05 b1 48 2d 00 64 c7 00 26 00 00 00 48 c7 c0 ff ff ff ff c3 66 2e 0f 1f 84 00 00 00 00 00 b8 10 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 81 48 2d 00 f7 d8 64 89 01 48
<4> [655.099409] RSP: 002b:00007ffd98238788 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
<4> [655.099411] RAX: ffffffffffffffda RBX: 0000558c42bec5f0 RCX: 00007fed56fcc5d7
<4> [655.099412] RDX: 00007ffd982387e0 RSI: 00000000c03864bc RDI: 0000000000000005
<4> [655.099413] RBP: 00007ffd982387e0 R08: 0000558c42c33fd0 R09: 00000000000000f4
<4> [655.099414] R10: 0000000000000002 R11: 0000000000000246 R12: 00000000c03864bc
<4> [655.099415] R13: 0000000000000005 R14: 0000000000000002 R15: 0000000000000401
<4> [655.099421] irq event stamp: 849246
<4> [655.099423] hardirqs last  enabled at (849245): [<ffffffffa512f667>] console_unlock+0x3f7/0x5a0
<4> [655.099425] hardirqs last disabled at (849246): [<ffffffffa5001a8a>] trace_hardirqs_off_thunk+0x1a/0x20
<4> [655.099427] softirqs last  enabled at (848572): [<ffffffffa5c0033e>] __do_softirq+0x33e/0x4ae
<4> [655.099429] softirqs last disabled at (848565): [<ffffffffa50bc129>] irq_exit+0xa9/0xc0
<4> [655.099459] WARNING: CPU: 0 PID: 1466 at drivers/gpu/drm/i915/display/intel_display.c:1280 assert_plane+0xaf/0xc0 [i915]
<4> [655.099460] ---[ end trace ed895ae5a9cfacef ]---
Comment 1 CI Bug Log 2019-09-11 05:44:01 UTC
The CI Bug Log issue associated to this bug has been updated.

### New filters associated

* TGL: igt@kms_atomic_transition@plane-toggle-modeset-transition - fail - cursor D assertion failure (expected on, current off)
  (No new failures associated)

* TGL: igt@runner@aborted - fail - Previous test: kms_atomic_transition (plane-toggle-modeset-transition)
  (No new failures associated)
Comment 2 Ankit 2019-09-17 04:27:19 UTC
Assessment:
Reproducible : 100% . Can be reproduced always when enabling cursor plane on Pipe D. Currently seen only on TGL platform.

Impact : High

What does the sub-test do:
The test enables pipes sequentially and does a modeset. All planes are then enabled. This is followed by disable of the pipes and planes.

The issue:
The test itself passes, but there is WARNING in the dmesg, that the cursor plane for Pipe D is expected to be enabled but actually is  disabled. This assert is during the atomic_tail commit after the pipe gets enabled and the plane state is verified. The state verification of cursor plane fails, resulting in assert failure.
Comment 3 Ankit 2019-09-17 06:37:29 UTC
On some initial debug, it is observed, that the issue is reproducing exclusively on PIPE D with cursor plane.
After the test is run, the screen is observed to be blank, affecting subsequent tests.
Raising the importance to 'Critical'.
Comment 4 Ankit 2019-09-18 10:17:11 UTC
CUR_CTL register is missing for Pipe D, due to which the plane-state checking fails in intel_atomic_commit_tail, while enabling the cursor plane. Need to add the register offset for PIPE D Cursor.
Comment 5 CI Bug Log 2019-09-18 15:28:23 UTC
A CI Bug Log filter associated to this bug has been updated:

{- TGL: igt@kms_atomic_transition@plane-toggle-modeset-transition - fail - cursor D assertion failure (expected on, current off) -}
{+ TGL: igt@kms_atomic_transition@plane-toggle-modeset-transition - fail - cursor D assertion failure (expected on, current off) +}

New failures caught by the filter:

  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_369/fi-tgl-u2/igt@kms_atomic_transition@plane-toggle-modeset-transition.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_370/fi-tgl-u2/igt@kms_atomic_transition@plane-toggle-modeset-transition.html
  * https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_371/fi-tgl-u2/igt@kms_atomic_transition@plane-toggle-modeset-transition.html
Comment 6 Ankit 2019-09-25 05:41:10 UTC
Patch sent : https://patchwork.freedesktop.org/series/67144/ to add the register CUR_CTL_D. Patch merged in drm-tip. With this the issue should be resolved.
Comment 7 Ankit 2019-09-27 04:52:44 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6960/shard-tglb6/igt@kms_atomic_transition@plane-toggle-modeset-transition.html

The issue is not observed any more, as patch is already merged.
Closing the issue.
Comment 9 Jani Saarinen 2019-09-27 05:44:18 UTC
So this was on build? https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6951/git-log-oneline.txt
Comment 10 Ankit 2019-09-27 06:18:49 UTC
As I understand, TGL machines were not in shards for the build CI_DRM_6951, and this issue would be observed on TGL only, since only it has PIPE D enabled.

Now I can see the TGL systems are added to shards for running all IGT, and since the patch is merged, this issue is not seen in dmesgs.
Comment 11 Martin Peres 2019-10-16 12:43:48 UTC
Thanks a lot Ankit, you did a great job assessing and driving this bug down :)
Comment 12 CI Bug Log 2019-10-16 12:43:57 UTC
The CI Bug Log issue associated to this bug has been archived.

New failures matching the above filters will not be associated to this bug anymore.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.